[package]
name = "coreplus"
version = "0.2.0"
edition = "2018"
license = "MIT"
description = "The batteries for core that you never knew you needed."
repository = "https://github.com/lachlansneff/coreplus"
documentation = "https://docs.rs/coreplus"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []

[dependencies]